# Co-VINS

./: .gitignore  VERSION.md  noetic.patch
config/: multi_agent_rviz.rviz
config/minihattan/: frames.gv  minihattan_config.yaml  minihattan_config_d1.yaml  minihattan_config_d2.yaml  minihattan_config_straight.yaml
pcd_publisher/: CMakeLists.txt  package.xml
pcd_publisher/launch/: bw_launch.launch  pcd_publisher.launch
pcd_publisher/src/: bw_publisher_node.cpp  my_static_tf2_broadcaster.cpp  parameters.cpp  parameters.h  pcd_publisher.cpp  pcd_publisher_node.cpp  test.cpp
pose_graph/src/: pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
vins_estimator/: package.xml
vins_estimator/launch/: 10secbag.launch  A3_swarm.launch  depth_test.launch  euroc_multi_agent.launch  minihattan.launch  minihattan2.launch  rrc_test.launch  rrc_test_two_bags.launch
vins_estimator/src/: estimator.cpp  estimator_node.cpp
vins_estimator/src/utility/: visualization.cpp
